Update name to match new-component entry script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "new-component"
+name = "new_component"
 version = "0.4.2"
 description = "Quickly create opinionated Styled Components for React Projects"
 authors = [
